--- a/src/page/Loading.form
+++ b/src/page/Loading.form
@@ -43,7 +43,7 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\FRAME\Desktop\xogame_g2-2\src\imgs\loading.gif"/>
+          <Image iconType="3" name="/imgs/loading.gif"/>
         </Property>
         <Property name="toolTipText" type="java.lang.String" value=""/>
       </Properties>
